--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -121,3 +121,26 @@
     </ion-list>
   </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-row>
+      <ion-col class="center2" col-3 (click)="goPage('transaction')">
+        <img width="25" height="25" src="assets/icon/1.png">
+        <p>{{'TRANSACCION'|translate}}</p>
+      </ion-col>
+      <ion-col class="center2" col-3 (click)="goPage('history')">
+        <!-- <ion-badge item-end>{{count}}</ion-badge> -->
+        <img width="25" height="25" src="assets/icon/2.png">
+        <p>{{'HISTORIAL'|translate}}</p>
+      </ion-col>
+      <ion-col class="center2" col-3 (click)="goPage('maps')">
+        <img width="25" height="25" src="assets/icon/3.png">
+        <p>{{'MAPA'|translate}}</p>
+      </ion-col>
+      <ion-col class="center2" col-3 (click)="goPage('profile')">
+        <img width="25" height="25" src="assets/icon/4.png">
+        <p>{{'CUENTA'|translate}}</p>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
