--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-content class="BackGRa" padding>
 	<div class="center">
-		<img class="logo" src="assets/imgs/EPCLogo.png" />
+		<img class="logo mrgLogoTopBut" src="assets/imgs/EPCLogo.png" />
 	</div>
 	<div class="center mrg36Top">
 		<ion-row>
