--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,19 +1,31 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Información de cuenta
-    </ion-title>
-  </ion-navbar>
+  <div class="BackgroundPpal">
+    <div style="background: transparent">
+        <img class="icoClose" icon-end src="assets/newIcons/17.png">
+        <p style="position: absolute; color: white; margin-left: 18em">
+          Cerrar sesión
+        </p>
+    </div>
+           
+
+    <ion-row>
+      <ion-col>
+        <img class="styleLogo " src="assets/newIcons/24.png">
+      </ion-col>
+    </ion-row>
+   
+  </div>
 </ion-header>
 <ion-content padding class="BackGR3">
   <ion-row>
     <ion-col col-12>
       <button ion-button (click)="cerrarSesion()" block class="buttonPayCash">Cerrar sesión</button>
     </ion-col>
+
   </ion-row>
   <ion-card style="background: transparent">
     <ion-card-header>
-        <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Account.png"></ion-img>
+      <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Account.png"></ion-img>
       <!-- <ion-icon name="person" item-start></ion-icon> -->
       Información personal
     </ion-card-header>
@@ -26,13 +38,12 @@
 
         <ion-item>
           <ion-label stacked>Apellidos</ion-label>
-          <ion-input type="text" required name="userregistroapellido"
-                     [(ngModel)]="usuario.last_name"></ion-input>
+          <ion-input type="text" required name="userregistroapellido" [(ngModel)]="usuario.last_name"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label stacked>Género</ion-label>
           <ion-select okText="Guardar" cancelText="Cancelar" [(ngModel)]="usuario.gender" name="userregistrogenero"
-                      interface="popover">
+            interface="popover">
             <ion-option value="f">Femenino</ion-option>
             <ion-option value="m">Masculino</ion-option>
           </ion-select>
@@ -44,7 +55,7 @@
 
   <ion-card>
     <ion-card-header>
-        <ion-img style="background: transparent" width="15" height="15" src="assets/icon/key.png"></ion-img>
+      <ion-img style="background: transparent" width="15" height="15" src="assets/icon/key.png"></ion-img>
       Información de cuenta
     </ion-card-header>
     <ion-card-content>
@@ -81,14 +92,12 @@
 
 
       <ion-row>
-        <button ion-button block class="buttonPayCash"
-                *ngIf=" (view_Btn_phone) && (view_Verify_Phone == false)"
-                (click)="reenviarConfirm('phone')">Reenviar confirmación móvil
+        <button ion-button block class="buttonPayCash" *ngIf=" (view_Btn_phone) && (view_Verify_Phone == false)"
+          (click)="reenviarConfirm('phone')">Reenviar confirmación móvil
         </button>
 
-        <button ion-button block class="buttonPayCash"
-                *ngIf=" (view_Btn_mail) && view_Verify_Mail == false"
-                (click)="reenviarConfirm('mail')">Reenviar confirmación email
+        <button ion-button block class="buttonPayCash" *ngIf=" (view_Btn_mail) && view_Verify_Mail == false" (click)="reenviarConfirm('mail')">Reenviar
+          confirmación email
         </button>
       </ion-row>
 
@@ -97,7 +106,7 @@
 
   <ion-card>
     <ion-card-header>
-        <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Ubicacion.png"></ion-img>
+      <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Ubicacion.png"></ion-img>
       Información de ubicación
     </ion-card-header>
     <ion-card-content>
