--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -6,17 +6,17 @@
 		<ion-row>
 			<ion-col (click)="goPage('account')" class="lineRight lineRight2 linerig" col-6 >
 				<img class="tamaIcos" src="assets/newIcons/13.png" />
-				<h6 class="colWhite">Mi cuenta</h6>
+				<h6 class="colWhite">{{'MI_CUENTA'|translate}}</h6>
 			</ion-col>
 			<ion-col (click)="goPage('security')" class="lineRight2" col-6 >
 				<img class="tamaIcos" src="assets/newIcons/14.png" />
-				<h6 class="colWhite">Seguridad</h6>
+				<h6 class="colWhite">{{'SEGURIDAD'|translate}}</h6>
 			</ion-col>
 		</ion-row>
 		<ion-row>
 			<ion-col (click)="goPage('TransactionPage')" class="lineRight" col-6>
 				<img class="tamaIcos" src="assets/newIcons/15.png" />
-				<h6 class="colWhite">Transacciones</h6>
+				<h6 class="colWhite">{{'TRANSACCION'|translate}}</h6>
 			</ion-col>
 			<ion-col (click)="goPage('history')" >
 				<img class="tamaIcos" src="assets/newIcons/16.png" />
