--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -7,7 +7,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <h6> Saldo por pagar :</h6>
+        <h6>{{'SALDO_POR_PAGAR'|translate}}:</h6>
       </ion-col>
     </ion-row>
     <ion-row class="styleSegment">
@@ -15,13 +15,13 @@
         <div padding>
           <ion-segment class="backSegment marg4Top center " [(ngModel)]="filtro.status" (ionChange)="getInfo()">
             <ion-segment-button value="0">
-              Solicitadas
+              {{'SOLICITADAS'|translate}}
             </ion-segment-button>
             <ion-segment-button value="1">
-              Pagadas
+              {{'POR_PAGAR'|translate}}
             </ion-segment-button>
             <ion-segment-button value="2">
-              Retiradas
+              {{'RETIRADAS'|translate}}
             </ion-segment-button>
           </ion-segment>
         </div>
@@ -37,8 +37,8 @@
           <img class="imgLogoWidth" src="assets/newIcons/27.png">
         </div>
         <div class="centerIcoText">
-          <h1>Bienvenido a EyePayCash</h1>
-          <p>Para recibir fondos desliza hacia la derecha y para enviarlos desliza hacia la izquierda.</p>
+          <h1>{{'MENSAJE_BIENVENIDA'| translate}}</h1>
+          <p>{{'FONDOS_SLIDE' | translate}}</p>
         </div>
       </div>
 
@@ -68,7 +68,7 @@
         </div>
         <div class="centerIcoText">
           <h1>Auuchh !</h1>
-          <p>No tiene transacciones enviadas aún.</p>
+          <p>{{'TRANSACCIONES_ENVIADAS'|translate}}</p>
         </div>
       </div>
       <ion-card *ngFor="let transaction of transactions" (click)="goDetalle(transaction)" class="center bground">
@@ -97,7 +97,7 @@
         </div>
         <div class="centerIcoText">
           <h1>Auuchh !</h1>
-          <p>No tiene transacciones recibidas aún.</p>
+          <p>{{'TRANSACCIONES_RECIBIDAS'|translate}}</p>
         </div>
       </div>
       <ion-card *ngFor="let transaction of transactions" (click)="goDetalle(transaction)" class="center bground">
