--- a/src/pages/recovery-password/recovery-password.html
+++ b/src/pages/recovery-password/recovery-password.html
@@ -5,27 +5,27 @@
 
 	<div *ngIf="isvisible">
 		<ion-item>
-			<ion-label stacked>Ingrese número celular</ion-label>
+			<ion-label stacked>{{'INGRESE_CELULAR'|translate}}</ion-label>
 			<ion-input type="text" [(ngModel)]="data" name="userdata"></ion-input>
 		</ion-item>
 		<ion-item *ngIf="iscodigo2">
-			<ion-label stacked>Ingrese código de verificación</ion-label>
+			<ion-label stacked>{{'INGRESE_CODIGO_VERIFICACION'|translate}}</ion-label>
 			<ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
 		</ion-item>
 		<ion-row class="divMargin">
 			<ion-col col-12 *ngIf="!iscodigo2">
-				<button ion-button (click)="sendMessage('phone')" block class="buttonPayCash">Enviar mensaje</button>
+				<button ion-button (click)="sendMessage('phone')" block class="buttonPayCash">{{'ENVIAR_MENSAJE'|translate}}</button>
 			</ion-col>
 			<ion-col col-12 *ngIf="iscodigo2">
-				<button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
+				<button ion-button (click)="confirmCode()" block class="buttonPayCash">{{'CONFIRMAR_CODIGO'|translate}}Confirmar código</button>
 			</ion-col>
 		</ion-row>
 		<ion-row class="marginLft divMargin20">
 			<ion-col col-4>
-				<button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
+				<button ion-button (click)="cancelar()" class="buttonPayCash">{{'CANCELAR'|translate}}</button>
 			</ion-col>
 			<ion-col col-6 *ngIf="!iscodigo2">
-				<button ion-button (click)="changeVisible()" class="buttonPayCash">Recuperar por email</button>
+				<button ion-button (click)="changeVisible()" class="buttonPayCash">{{'RECUPERAR_X_EMAIL'|translate}}</button>
 			</ion-col>
 		</ion-row>
 	</div>
@@ -33,7 +33,7 @@
 	<div *ngIf="!isvisible">
 			<div [formGroup]="formGroup">
 		<ion-item>
-			<ion-label stacked>Ingrese su email</ion-label>
+			<ion-label stacked>{{'INGRESE_EMAIL'|translate}}</ion-label>
 			<ion-input type="text"  name="dataname" required formControlName="data"></ion-input>		
 		</ion-item>
 		<ion-item no-lines *ngIf="formGroup.invalid">
@@ -41,23 +41,23 @@
 		</ion-item>
 	</div>
 		<ion-item *ngIf="iscodigo">
-			<ion-label stacked>Ingrese código de verificación</ion-label>
+			<ion-label stacked>{{'INGRESE_CODIGO_VERIFICACION'|translate}}</ion-label>
 			<ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
 		</ion-item>
 		<ion-row class="divMargin">
 			<ion-col col-12 *ngIf="!iscodigo">
-				<button ion-button (click)="sendMessage('mail')" block class="buttonPayCash">Enviar email</button>
+				<button ion-button (click)="sendMessage('mail')" block class="buttonPayCash">{{'ENVIAR_EMAIL'|translate}}</button>
 			</ion-col>
 			<ion-col col-12 *ngIf="iscodigo">
-				<button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
+				<button ion-button (click)="confirmCode()" block class="buttonPayCash">{{'CONFIRMAR_CODIGO'|translate}}</button>
 			</ion-col>
 		</ion-row>
 		<ion-row class="marginLft divMargin">
 			<ion-col col-4>
-				<button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
+				<button ion-button (click)="cancelar()" class="buttonPayCash">{{'CANCELAR'|translate}}</button>
 			</ion-col>
 			<ion-col col-6>
-				<button ion-button (click)="changeVisible()" class="buttonPayCash">Recuperar por SMS</button>
+				<button ion-button (click)="changeVisible()" class="buttonPayCash">{{'RECUPERAR_X_SMS'|translate}}</button>
 			</ion-col>
 		</ion-row>
 	</div>
