--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -20,7 +20,6 @@
         <ion-label text-wrap color="primary" fixed>Email</ion-label>
         <ion-input disabled text-right placeholder="{{usuario.mail}}"></ion-input>
       </ion-item>
-
       <ion-item>
         <ion-label text-wrap color="primary" fixed>Teléfono</ion-label>
         <ion-input disabled text-right placeholder="{{usuario.phone}}"></ion-input>
@@ -83,14 +82,9 @@
   </ion-row>
   <ion-card style="background: transparent">
     <ion-card-header>
-<<<<<<< HEAD
         <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Account.png"></ion-img>
-      <!-- <ion-icon name="person" item-start></ion-icon> -->
+      <ion-icon name="person" item-start></ion-icon>
     {{'INFORMACION_PERSONAL'|translate}}
-=======
-      <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Account.png"></ion-img>
-      Información personal
->>>>>>> 25643b37f3576b268c07d204dc7cdbfa702d89e3
     </ion-card-header>
     <ion-card-content>
       <ion-list>
@@ -100,14 +94,9 @@
         </ion-item>
 
         <ion-item>
-<<<<<<< HEAD
           <ion-label stacked>{{'APELLIDOS'|translate}}</ion-label>
           <ion-input type="text" required name="userregistroapellido"
                      [(ngModel)]="usuario.last_name"></ion-input>
-=======
-          <ion-label stacked>Apellidos</ion-label>
-          <ion-input type="text" required name="userregistroapellido" [(ngModel)]="usuario.last_name"></ion-input>
->>>>>>> 25643b37f3576b268c07d204dc7cdbfa702d89e3
         </ion-item>
         <ion-item>
           <ion-label stacked>{{'GENERO'| translate}}</ion-label>
@@ -123,13 +112,8 @@
   </ion-card>
   <ion-card>
     <ion-card-header>
-<<<<<<< HEAD
         <ion-img style="background: transparent" width="15" height="15" src="assets/icon/key.png"></ion-img>
       {{'INFORMACION_DE_CUENTA'|translate}}
-=======
-      <ion-img style="background: transparent" width="15" height="15" src="assets/icon/key.png"></ion-img>
-      Información de cuenta
->>>>>>> 25643b37f3576b268c07d204dc7cdbfa702d89e3
     </ion-card-header>
     <ion-card-content>
       <ion-row>
@@ -159,7 +143,6 @@
         </ion-col>
       </ion-row>
       <ion-row>
-<<<<<<< HEAD
         <button ion-button block class="buttonPayCash"
                 *ngIf=" (view_Btn_phone) && (view_Verify_Phone == false)"
                 (click)="reenviarConfirm('phone')">{{'REENVIAR_CONFIRMACION_MOVIL'| translate}}
@@ -168,26 +151,14 @@
         <button ion-button block class="buttonPayCash"
                 *ngIf=" (view_Btn_mail) && view_Verify_Mail == false"
                 (click)="reenviarConfirm('mail')">{{'REENVIAR_CONFIRMACION_EMAIL'| translate}}
-=======
-        <button ion-button block class="buttonPayCash" *ngIf=" (view_Btn_phone) && (view_Verify_Phone == false)"
-          (click)="reenviarConfirm('phone')">Reenviar confirmación móvil
-        </button>
-        <button ion-button block class="buttonPayCash" *ngIf=" (view_Btn_mail) && view_Verify_Mail == false" (click)="reenviarConfirm('mail')">Reenviar
-          confirmación email
->>>>>>> 25643b37f3576b268c07d204dc7cdbfa702d89e3
         </button>
       </ion-row>
     </ion-card-content>
   </ion-card>
   <ion-card>
     <ion-card-header>
-<<<<<<< HEAD
         <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Ubicacion.png"></ion-img>
       {{'INFORMACION_DE_UBICACION'|translate}}
-=======
-      <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Ubicacion.png"></ion-img>
-      Información de ubicación
->>>>>>> 25643b37f3576b268c07d204dc7cdbfa702d89e3
     </ion-card-header>
     <ion-card-content>
       <ion-row>
