--- a/src/pages/coins/coins.html
+++ b/src/pages/coins/coins.html
@@ -1,18 +1,131 @@
-<!--
-  Generated template for the CoinsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>coins</ion-title>
-  </ion-navbar>
-
+  <div class="BackgroundPpal">
+    <ion-row>
+      <ion-col col-12>
+        <img class="imgLogoWidth marginlogo" src="assets/imgs/EPCLogo.png">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-12>
+        <h6 class="colorwhite">Precios :</h6>
+      </ion-col>
+    </ion-row>
+    <ion-row class="styleSegment">
+      <ion-col>
+        <div class="mrgLeftSegment">
+          <ion-segment class="backSegment marg4Top center " [(ngModel)]="Coins">
+            <ion-segment-button value="0">
+              USD
+            </ion-segment-button>
+            <ion-segment-button value="1">
+              EUR
+            </ion-segment-button>
+            <ion-segment-button value="2">
+              LOCAL
+            </ion-segment-button>
+          </ion-segment>
+        </div>
+      </ion-col>
+    </ion-row>
+  </div>
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content>
+  <div padding [ngSwitch]="Coins">
+    <ion-list *ngSwitchCase="'0'">
+      <ion-row>
+        <ion-col col-8>
+          <div class="centerIcoText">
+            <img class="imgIcoin" src="assets/newIcons/19.png">
+            <h6 class="textCoinsmon">BITCOIN</h6>
+            <p class="textSecon">BTC</p>
+          </div>     
+        </ion-col>
+        <ion-col col-4 padding>
+          <p class="mrg10Top textTaman">
+            6,312.54
+          </p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+            <div>
+                <img src="assets/newIcons/LineaHoriz.png">
+            </div>
+        </ion-col>
+      </ion-row>
+    </ion-list>
+    <ion-list *ngSwitchCase="'1'">
+      <ion-row>
+        <ion-col col-8>
+          <div class="centerIcoText">
+            <img class="imgIcoin" src="assets/newIcons/19.png">
+            <h6 class="textCoinsmon">BITCOIN</h6>
+            <p class="textSecon">BTC</p>
+          </div>
+        </ion-col>
+        <ion-col col-4 padding>
+          <p class="mrg10Top textTaman">
+            6,500.20
+          </p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>
+              <div>
+                  <img src="assets/newIcons/LineaHoriz.png">
+              </div>
+          </ion-col>
+        </ion-row>
+    </ion-list>
+    <ion-list *ngSwitchCase="'2'">
+      <ion-row>
+        <ion-col col-8>
+          <div class="centerIcoText">
+            <img class="imgIcoin" src="assets/newIcons/19.png">
+            <h6 class="textCoinsmon">BITCOIN</h6>
+            <p class="textSecon">BTC</p>
+          </div>
+        </ion-col>
+        <ion-col col-4 padding>
+          <p class="mrg10Top textTaman">
+            20'000
+          </p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>
+              <div>
+                  <img src="assets/newIcons/LineaHoriz.png">
+              </div>
+          </ion-col>
+        </ion-row>
+    </ion-list>
+  </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-row>
+      <ion-col class="center2" col-2 (click)="goPage('precios')">
+        <img width="40" height="40" src="assets/newIcons/11.png">
+        <p>Precios</p>
+      </ion-col>
+      <ion-col class="center2" col-3 (click)="goPage('transaction')">
+        <img width="40" height="40" src="assets/icon/1.png">
+        <p>{{'TRANSACCION'|translate}}</p>
+      </ion-col>
+      <ion-col class="center2 mar1Left" col-2 (click)="goPage('history')">
+        <img width="40" height="40" src="assets/icon/2.png">
+        <p>{{'HISTORIAL'|translate}}</p>
+      </ion-col>
+      <ion-col class="center2" col-2 (click)="goPage('maps')">
+        <img width="40" height="40" src="assets/icon/3.png">
+        <p>{{'MAPA'|translate}}</p>
+      </ion-col>
+      <ion-col class="center2" col-2 (click)="goPage('profile')">
+        <img width="40" height="40" src="assets/icon/4.png">
+        <p>{{'CUENTA'|translate}}</p>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
